# imghash-viewer

./: .eslintrc.cjs  .prettierrc  CHANGELOG.md  README.md  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  optimization.yml  other.yml
.github/workflows/: checks.yaml  release.yaml
icon/: icon.afdesign
src/: Home.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: decode.rs  hash.rs  main.rs  summary.rs
src/components/: Back.tsx  BottomBar.tsx  ErrorModal.tsx  HashForm.tsx  HomeSelectButton.tsx  MatrixView.tsx  Spinner.tsx  TitleHeader.tsx
src/decode/: index.tsx
src/decode/components/: HashForm.tsx  MatrixViewContainer.tsx
src/hash/: index.tsx
src/hash/components/: HashForm.tsx  HashResultView.tsx  HashSummaryView.tsx  HashView.tsx  ImageSummaryView.tsx  MatrixView.tsx  MatrixViewContainer.tsx  SelectImage.tsx
src/icons/: BrainIcon.tsx  HelpIcon.tsx  ImageFileIcon.tsx  ImageIcon.tsx  InfoIcon.tsx  LeftArrowIcon.tsx  ThemeIcon.tsx  XIcon.tsx
src/img/: index.tsx
src/img/components/: HashSummaryView.tsx  ImageSummaryView.tsx  SelectImage.tsx
src/models/: hash_result.ts  hash_type.ts  matrix.ts  summary.ts
